--- a/missioncapital.css
+++ b/missioncapital.css
@@ -1,10 +1,10 @@
 .bg-dark{
-    background-color: #333333 !important;
-    color: #FFFFFF !important;
+    background-color: #333333;
+    color: #FFFFFF;
 }
 .bg-dark h4 {
-    color: #7CC24D !important;
+    color: #7CC24D;
 }
 .bg-dark h5{
-    color: #FFFFFF !important;
+    color: #FFFFFF;
 }
